2012-10-12  Marc Glisse  <marc.glisse@inria.fr>

PR c++/53055

gcc/c-family/
	* c-common.h (enum ref_operator) [RO_ARROW_STAR]: New.

gcc/cp/
	* call.c (build_new_op_1): Pass RO_ARROW_STAR to cp_build_indirect_ref.
	* typeck.c (cp_build_indirect_ref): Handle RO_ARROW_STAR.

gcc/testsuite/
	* g++.dg/pr53055.C: New testcase.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@192401 138bc75d-0d04-0410-961f-82ee72b054a4